[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }

getrandom = { version = "0.2", features = ["js"] }
rltk = { version = "0.8.7" }
specs = "0.18.0"
specs-derive = "0.4.1"
petgraph = "0.6.2"
